	* When limits are not respcted the _desired is now smottly
	* moved inside the limits
	* Current build 15

2009-25-March  Maggiali Marco <marco.maggiali@iit.t>
Added control for the receiving of the PID values before enabling the PWM.
* Current build 16. The last two byte of the BCAST message are used for the _received_pid variables:
	
2009-24-April  Maggiali Marco <marco.maggiali@iit.t>
* Current build 17. I have removed in the last two byte of the BCAST message the _received_pid variable

2009-10-June  Maggiali Marco <marco.maggiali@iit.t>
* Current build 18. I have add new versions for reading the hall sensors in the hand from the MAIS: 1.21, 1.28 and 1.30 
                    Nothing is changed in the other versions

2009-10-June  Maggiali Marco <marco.maggiali@iit.t>
* Current build 19. maggia: encoder and hall check for avoiding  losing of  the tendons in firmware version 1.20 1.21 1.28 and 1.30

2009-24-June  Francesco Nori <francesco.nori@iit.t>
* Current build 20. iron: encoder and hall check removed in version 0x0128 and 0x0130 (since it was impossible to tune the parameters).

2009-24-June  Francesco Nori <francesco.nori@iit.t>
* Current build 22. iron: watch dog time on MAIS increased

2009-24-June  Francesco Nori <francesco.nori@iit.t>
* Current build 23. iron: removed encoder drift on 0x0120	
	
2009-24-June  Francesco Nori <francesco.nori@iit.t>
* Current build 24. iron: integral discretization problem removed
	
2009-24-June  Francesco Nori <francesco.nori@iit.t>
* Current build 25. iron: DEBUG_ANA_INC can now be used to print out the incremental encoder readings (a can_print message diplays the incremental encoders positions every second)
	
	
2010-26-February  Maggiali Marco <marco.maggiali@iit.t>
* Current build 26. maggia: now from the calibration file it is passed the current limit in mA. 

2010-20-April Francesco Nori <francesco.nori@iit.t>
* Current build 27. Timeout on velocity control in case messages are not received within 100ms.